--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,7 +3,7 @@ body {
 	background-color: #f4f4f4;
 	margin: 0;
 	padding: 0;
-	display: flex;
+	display: contents;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
@@ -25,6 +25,16 @@ h1 {
 form {
 	margin-top: 20px;
 }
+
+.login-div {
+	margin: 50px auto;
+	width: 300px;
+	padding: 20px;
+	border: 2px solid #000; 
+	border-radius: 5px; 
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  
+  }
 
 label {
 	display: block;
