--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
 	position: absolute;
-	top: 175px;
+	top: 130px;
 	left: 50%;
 	transform: translateX(-50%);
 	padding: 0 1rem;
@@ -33,6 +33,7 @@ label {
 	color: #666;
 }
 
+input[type="name"],
 input[type="email"],
 input[type="password"] {
 	width: 100%;
@@ -55,19 +56,4 @@ button {
 
 button:hover {
 	background-color: #0056b3;
-}
-
-a {
-	position: absolute;
-	position: absolute;
-	top: 520px;
-	text-align: center;
-  margin-top: 1rem;
-  color: #007bff;
-	text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-a:hover {
-	text-decoration: underline;
 }
