--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -130,9 +130,10 @@ table {
 
 :root {
 	--color-light-1: #f9f9f9;
-	--color-light-2: #efefef;
+	--color-light-2: #edebeb;
 	--color-dark-1: #1f1f1f;
-	--color-dark-1: #2e2e2e;
+	--color-dark-2: #2d2d2d;
+	--color-dark-3: #3d3d3d;
 
 	--color-main-1: #5865f1;
 	--color-main-2: #589af1;
