--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -90,3 +90,105 @@ header {
 		}
 	}
 }
+
+main {
+	padding: 30px 50px;
+
+	.container {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+		padding: 20px;
+		border-radius: 15px;
+		background: var(--color-light-1);
+
+		form {
+			border-radius: 8px;
+			border: 3px solid var(--color-dark-3);
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+			padding: 10px;
+
+			div {
+				input {
+					border: none;
+					overflow: visible;
+					background-color: transparent;
+					color: var(--color-dark-1);
+
+					&:focus {
+						outline: none;
+					}
+
+					&::placeholder {
+						letter-spacing: 0.5px;
+						color: #0000007c;
+					}
+				}
+			}
+
+			div:nth-child(1) {
+				border-bottom: 2px solid #0000003d;
+				& input {
+					height: 24px;
+					font: 20px var(--font-1);
+					&::placeholder {
+						font: 20px var(--font-1);
+					}
+				}
+			}
+
+			div:nth-child(2) {
+				& input {
+					min-height: 24px;
+					font: 18px var(--font-1);
+					&::placeholder {
+						font: 18px var(--font-1);
+					}
+				}
+			}
+
+			button {
+				padding: 6px;
+				border: none;
+				border-radius: 4px;
+				background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2), var(--color-main-3));
+				background-size: 200%;
+
+				font: 16px var(--font-1);
+				letter-spacing: 0.5px;
+				color: var(--color-light-1);
+
+				cursor: pointer;
+				transition: all 0.5s ease;
+
+				&:hover {
+					background-position: right;
+				}
+			}
+		}
+
+		.note {
+			border-radius: 8px;
+			border: 3px solid var(--color-dark-3);
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+			padding: 10px;
+
+			h6 {
+				border-bottom: 2px solid #0000003d;
+
+				font: bold 20px var(--font-1);
+				letter-spacing: 0.5px;
+				color: var(--color-dark-1);
+			}
+
+			p {
+				font: 18px var(--font-1);
+				color: var(--color-dark-2);
+			}
+		}
+	}
+}
