--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -132,8 +132,8 @@ table {
 	--color-light-1: #f9f9f9;
 	--color-light-2: #edebeb;
 	--color-dark-1: #1f1f1f;
-	--color-dark-2: #2d2d2d;
-	--color-dark-3: #3d3d3d;
+	--color-dark-2: #3d3d3d;
+	--color-dark-3: #626262;
 
 	--color-main-1: #5865f1;
 	--color-main-2: #589af1;
