--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -61,6 +61,10 @@ header {
 
 			transition: all 0.5s ease;
 
+			&.nav-active {
+				background-color: #ffffff2d;
+			}
+
 			&:hover {
 				background-color: #ffffff48;
 			}
