--- a/src/assets/css/auth.css
+++ b/src/assets/css/auth.css
@@ -8,10 +8,10 @@ body {
 	min-height: 100vh;
 	overflow: hidden;
 
-	background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2), var(--color-main-3));
+	background: linear-gradient(130deg, var(--color-main-1), var(--color-main-2));
 }
 
-.title {
+.hero {
 	display: block;
 	position: fixed;
 	top: 5px;
@@ -41,15 +41,15 @@ body {
 	align-items: center;
 	gap: 30px;
 
-	color: var(--color-dark-1);
-	background-color: var(--color-light-1);
-	box-shadow: 0 0 10px #00000035;
+	color: var(--color-light-1);
+	backdrop-filter: blur(50px) brightness(85%);
+	box-shadow: 0 0 10px var(--color-dark-03);
 
 	transition: all 1s ease;
 
 	h1 {
-		font: bold 32px var(--font-1);
-		letter-spacing: 0.5px;
+		font: 32px var(--font-1);
+		letter-spacing: 1px;
 	}
 
 	form {
@@ -60,13 +60,14 @@ body {
 		div {
 			display: flex;
 			flex-direction: column;
-			font: 16px var(--font-1);
+			font: lighter 16px var(--font-1);
 
 			input {
+				width: clamp(200px, 80vw, 400px);
 				padding: 8px;
 				border-radius: 5px;
-				border: 2px solid var(--color-main-2);
-				width: clamp(200px, 80vw, 400px);
+				border: none;
+				background-color: var(--color-light-03);
 			}
 		}
 
@@ -74,10 +75,11 @@ body {
 			border: none;
 			padding: 8px;
 			border-radius: 5px;
-			background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2), var(--color-main-3));
+			background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2));
 			background-size: 150%;
+			box-shadow: 0 0 8px var(--color-light-03);
 
-			font: 16px var(--font-1);
+			font: lighter 16px var(--font-1);
 			letter-spacing: 1px;
 			color: var(--color-light-1);
 
