--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -131,13 +131,15 @@ table {
 :root {
 	--color-light-1: #f9f9f9;
 	--color-light-2: #edebeb;
+	--color-light-03: #ffffff35;
+	--color-light-06: #ffffff65;
 	--color-dark-1: #1f1f1f;
 	--color-dark-2: #3d3d3d;
 	--color-dark-3: #626262;
+	--color-dark-03: #00000035;
 
-	--color-main-1: #5865f1;
-	--color-main-2: #589af1;
-	--color-main-3: #e9bcee;
+	--color-main-1: #40c9ff;
+	--color-main-2: #e81cff;
 
 	--color-danger-1: rgb(255, 57, 57);
 
