--- a/src/assets/css/auth.css
+++ b/src/assets/css/auth.css
@@ -1,4 +1,5 @@
 @import "./global.css";
+@import "./pop-up.css";
 
 body {
 	display: flex;
@@ -28,6 +29,7 @@ body {
 
 #signup-card {
 	transform: translateY(100vh);
+	animation: none;
 }
 
 .card {
@@ -46,6 +48,7 @@ body {
 	box-shadow: 0 0 10px var(--color-dark-03);
 
 	transition: all 1s ease;
+	animation: fade-in-from-bottom 0.6s ease-in-out;
 
 	h1 {
 		font: 32px var(--font-1);
@@ -60,7 +63,16 @@ body {
 		div {
 			display: flex;
 			flex-direction: column;
-			font: lighter 16px var(--font-1);
+			gap: 5px;
+
+			label {
+				display: flex;
+				gap: 10px;
+
+				p {
+					font: lighter 14px var(--font-1);
+				}
+			}
 
 			input {
 				width: clamp(200px, 80vw, 400px);
@@ -95,7 +107,7 @@ body {
 
 	p {
 		font: 16px var(--font-1);
-		color: var(--color-dark-1);
+		color: var(--color-light-2);
 		cursor: pointer;
 	}
 }
