--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -128,20 +128,213 @@ table {
 	border-spacing: 0;
 }
 
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fade-in-from-bottom {
+	from {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes pop-up {
+	0% {
+		transform: translateX(100%);
+	}
+	20% {
+		transform: translateX(0);
+	}
+	80% {
+		transform: translateX(0);
+	}
+	100% {
+		transform: translateX(100%);
+	}
+}
+
 :root {
 	--color-light-1: #f9f9f9;
-	--color-light-2: #edebeb;
+	--color-light-2: #dddddd;
 	--color-light-03: #ffffff35;
 	--color-light-06: #ffffff65;
 	--color-dark-1: #1f1f1f;
 	--color-dark-2: #3d3d3d;
 	--color-dark-3: #626262;
 	--color-dark-03: #00000035;
+	--color-dark-06: #00000065;
 
 	--color-main-1: #40c9ff;
 	--color-main-2: #e81cff;
 
-	--color-danger-1: rgb(255, 57, 57);
+	--color-danger-1: #ff2929;
+	--color-danger-03: #ff3b3b35;
+	--color-danger-06: #ff3b3b65;
+
+	--color-success-1: #3dff6a;
 
 	--font-1: "Arial", sans-serif;
+}
+
+.modal {
+	width: clamp(300px, 70vw, 750px);
+	padding: 50px 30px;
+	border-radius: 10px;
+
+	z-index: 20;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	background-color: var(--color-light-1);
+	box-shadow: 0 0 10px #00000035;
+
+	animation: fade-in 0.6s ease-in-out both;
+
+	a {
+		position: absolute;
+		top: 5px;
+		right: 10px;
+		text-decoration: none;
+		color: var(--color-dark-1);
+
+		cursor: pointer;
+	}
+
+	h3 {
+		font: bold 24px var(--font-1);
+		letter-spacing: 0.5px;
+		margin: 0 0 30px 0;
+	}
+
+	button {
+		padding: 6px;
+		border: none;
+		border-radius: 4px;
+		background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2));
+		background-size: 200%;
+		font: 16px var(--font-1);
+		letter-spacing: 0.5px;
+		color: var(--color-light-1);
+		cursor: pointer;
+		transition: all 0.5s ease;
+
+		&:hover {
+			background-position: right;
+		}
+	}
+
+	&.collab-modal {
+		form {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			gap: 20px;
+
+			input {
+				padding: 0 10px;
+				font: 14px var(--font-1);
+				min-height: 24px;
+				border: 1px solid var(--color-dark-06);
+				border-radius: 4px;
+
+				&::placeholder {
+					font: 14px var(--font-1);
+				}
+			}
+		}
+	}
+
+	&.update-modal {
+		form {
+			width: 100%;
+			border-radius: 8px;
+			border: 3px solid var(--color-dark-3);
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+			padding: 10px;
+
+			div {
+				input,
+				textarea {
+					width: 100%;
+					border: none;
+					overflow: visible;
+					background-color: transparent;
+					color: var(--color-dark-1);
+
+					&:focus {
+						outline: none;
+					}
+
+					&::placeholder {
+						letter-spacing: 0.5px;
+						color: #0000007c;
+					}
+				}
+
+				textarea {
+					font: 16px var(--font-1);
+					resize: none;
+				}
+			}
+
+			div:nth-child(1) {
+				border-bottom: 2px solid #0000003d;
+				& input {
+					height: 24px;
+					font: 20px var(--font-1);
+					&::placeholder {
+						font: 20px var(--font-1);
+					}
+				}
+			}
+
+			div:nth-child(2) {
+				& input {
+					min-height: 24px;
+					font: 18px var(--font-1);
+					&::placeholder {
+						font: 18px var(--font-1);
+					}
+				}
+			}
+
+			button {
+				padding: 6px;
+				border: none;
+				border-radius: 4px;
+				background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2));
+				background-size: 200%;
+
+				font: 16px var(--font-1);
+				letter-spacing: 0.5px;
+				color: var(--color-light-1);
+
+				cursor: pointer;
+				transition: all 0.5s ease;
+
+				&:hover {
+					background-position: right;
+				}
+			}
+		}
+	}
 }
