--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -186,6 +186,22 @@ table {
 	--font-1: "Arial", sans-serif;
 }
 
+*::-webkit-scrollbar {
+	width: 12px;
+	height: 12px;
+}
+
+*::-webkit-scrollbar-track {
+	background-color: var(--color-light-2);
+}
+
+*::-webkit-scrollbar-thumb {
+	background: linear-gradient(to bottom, var(--color-main-1), var(--color-main-2));
+	border: 2px solid var(--color-dark-3);
+	border-radius: 6px;
+	cursor: default;
+}
+
 .modal {
 	width: clamp(300px, 70vw, 750px);
 	padding: 50px 30px;
