--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -183,7 +183,7 @@ table {
 
 	--color-success-1: #3dff6a;
 
-	--font-1: "Arial", sans-serif;
+	--font-1: "Plus Jakarta Sans";
 }
 
 *::-webkit-scrollbar {
