--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -8,6 +8,9 @@ body {
 	font-family: var(--font-1);
 
 	overflow-x: hidden;
+
+	margin: 0;
+  padding: 0;
 }
 
 main {
@@ -25,6 +28,7 @@ main {
 
 	transition: all 0.5s linear;
 
+	
 	.container {
 		display: flex;
 		flex-direction: column;
@@ -32,19 +36,19 @@ main {
 
 		width: clamp(200px, 75vw, 700px);
 		margin: 90px auto 40px;
-		border-radius: 15px;
 	}
 }
 
 .new-note-form {
-	border-radius: 8px;
+	border-radius: 16px;
 	border: 2px solid var(--color-dark-03);
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	padding: 10px;
-
-	animation: fade-in 0.8s ease-in-out;
+	padding: 20px;
+    background: var(--color-light-1);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    animation: fade-in 0.8s ease-in-out;
 
 	div {
 		input,
@@ -54,6 +58,7 @@ main {
 			overflow: visible;
 			background-color: transparent;
 			color: var(--color-dark-1);
+
 
 			&:focus {
 				outline: none;
@@ -93,21 +98,34 @@ main {
 	}
 
 	button {
-		padding: 8px;
+		padding: 10px;
 		border: none;
-		border-radius: 4px;
+		border-radius: 8px;
 		background: linear-gradient(110deg, var(--color-main-1), var(--color-main-2));
 		background-size: 200%;
 
-		font: 14px var(--font-1);
+		font: 16px var(--font-1);
 		letter-spacing: 0.5px;
 		color: var(--color-light-1);
 
 		cursor: pointer;
 		transition: all 0.5s ease;
 
+		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
 		&:hover {
 			background-position: right;
 		}
+	}
+}
+
+@keyframes fade-in {
+	from {
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
