--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -183,7 +183,7 @@ table {
 
 	--color-success-1: #3dff6a;
 
-	--font-1: "Plus Jakarta Sans";
+	--font-1: "Plus Jakarta Sans", Arial;
 }
 
 *::-webkit-scrollbar {
@@ -256,22 +256,31 @@ table {
 		}
 	}
 
-	&.collab-modal {
+	&.collab-modal,
+	&.reminder-modal {
 		form {
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
 			gap: 20px;
 
-			input {
-				padding: 0 10px;
-				font: 14px var(--font-1);
-				min-height: 24px;
-				border: 1px solid var(--color-dark-06);
-				border-radius: 4px;
+			div {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				gap: 5px;
 
-				&::placeholder {
+				input {
+					padding: 0 10px;
 					font: 14px var(--font-1);
+					min-height: 24px;
+					border: 1px solid var(--color-dark-06);
+					border-radius: 4px;
+
+					&::placeholder {
+						font: 14px var(--font-1);
+					}
 				}
 			}
 		}
