--- a/src/assets/css/note.css
+++ b/src/assets/css/note.css
@@ -3,7 +3,8 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-
+	
+	min-height: 200px;
 	padding: 10px;
 	border: 2px solid var(--color-dark-06);
 	border-radius: 12px;
@@ -36,6 +37,7 @@
 	}
 
 	.info {
+		margin-top: auto;
 		display: flex;
 		gap: 10px;
 
