--- a/src/assets/css/pop-up.css
+++ b/src/assets/css/pop-up.css
@@ -4,7 +4,8 @@
 	z-index: 20;
 	position: fixed;
 	bottom: 10px;
-	right: 0;
+	right: 10px;
+	max-width: 300px;
 
 	display: flex;
 	justify-content: center;
@@ -14,13 +15,14 @@
 	padding: 10px 20px;
 	border-radius: 8px 0 0 8px;
 
-	transform: translateX(100%);
-	animation: pop-up 8s both;
+	transform: translateY(100%);
+	animation: pop-up 0.3s ease;
 
 	p {
 		font: 14px var(--font-1);
 		color: var(--color-dark-1);
 		text-transform: capitalize;
+		margin: 0;
 	}
 
 	&.success {
@@ -29,5 +31,19 @@
 
 	&.error {
 		background-color: var(--color-danger-1);
+	}
+
+	.pop-up.active {
+		transform: translateY(0); 
+		animation: pop-up-slide-in 0.3s ease forwards; 
+	}
+
+	@keyframes pop-up-slide-in {
+		from {
+				transform: translateY(100%);
+		}
+		to {
+				transform: translateY(0);
+		}
 	}
 }
