--- a/src/assets/css/note.css
+++ b/src/assets/css/note.css
@@ -3,14 +3,14 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	
+
 	min-height: 200px;
 	padding: 10px;
 	border: 2px solid var(--color-dark-06);
 	border-radius: 12px;
 
 	overflow: hidden;
-	animation: fade-in 0.8s ease-in-out 0.4s both;
+	animation: fade 0.8s ease-in-out 0.4s both;
 
 	.collaborators {
 		margin: 0;
@@ -107,7 +107,7 @@
 		&.opened {
 			transform: translateX(0%);
 			transition: all 0.3s ease;
-			animation: fade-in 0.8s ease-in;
+			animation: fade 0.8s ease-in;
 		}
 	}
 }
